<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="crime_title_hint">Enter a Title for crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="time_picker">Pick time of Crime</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="empty_list_text">There are no crimes</string>
    <string name="empty_list_add">add a Crime</string>
    <string name="call_suspect">Calling Suspect</string>
    <string name="call_suspect_permission_aware">(need contact permission)</string>

    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    
    <string name="choose_suspect_button">Choose Suspect</string>
    <string name="send_report_button">Send Crime Report</string>
    
    <string name="crime_report">%1$s!
        The Crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="contact_permission_granted" translatable="false">permission to contact is granted</string>
    <string name="contact_permission_title" translatable="false">Contact Permission</string>
    <string name="contact_permission_message" translatable="false">need to access to contact for dial</string>
    <string name="permission_ok">Ok</string>
    <string name="permission_denied">Cancel</string>

</resources>