<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="11dp">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_title_label" />

        <EditText
            android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_title_hint" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_detail_label" />

        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/crime_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_picker" />

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved_label" />

        <Button
            android:id="@+id/choose_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_suspect_button" />

        <Button
            android:id="@+id/send_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_report_button" />

        <Button
            android:id="@+id/call_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_suspect_permission_aware"
            android:text="@string/call_suspect"
            android:visibility="gone" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>